<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.csf.mobile1.tp2.activity.MainActivity">

    <View
        android:id="@+id/topPanel"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:elevation="2dp"
        android:gravity="top"
        android:hint="@string/hint_input_text"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/encryptButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:elevation="2dp"
        android:text="@string/text_encrypt"
        app:layout_constraintBottom_toBottomOf="@+id/topPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/decryptButton" />

    <Button
        android:id="@+id/decryptButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_unlock"
        android:drawablePadding="16dp"
        android:elevation="2dp"
        android:text="@string/text_decrypt"
        app:layout_constraintBottom_toBottomOf="@+id/topPanel"
        app:layout_constraintLeft_toRightOf="@+id/encryptButton"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/selectKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:fabSize="normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decryptButton"
        app:srcCompat="@drawable/ic_key" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:freezesText="true"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="32dp"
        android:text="@string/hint_output_text"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel" />

    <ImageButton
        android:id="@+id/copyButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/text_copy"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/outputTextView"
        app:layout_constraintRight_toRightOf="@+id/outputTextView"
        app:srcCompat="@drawable/ic_copy" />

    <TextView
        android:id="@+id/currentKeyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:freezesText="true"
        android:gravity="bottom|start"
        android:text="@string/text_current_key"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/outputTextView"
        app:layout_constraintLeft_toLeftOf="@+id/outputTextView"
        app:layout_constraintRight_toRightOf="@+id/outputTextView" />

</android.support.constraint.ConstraintLayout>